@@ -6,9 +6,9 @@ ltn-interface-debug-logfile=Schreibe Debug Logdatei
 ltn-dispatcher-requester-threshold=Mindestmenge für Anforderung
 ltn-dispatcher-provider-threshold=Mindestmenge für Anbieter
 ltn-dispatcher-schedule-circuit-control=Fahrplan Schaltungsbedinungen
-ltn-dispatcher-depot-inactivity=Depot Inaktivität (ticks)
-ltn-dispatcher-stop-timeout=Haltestellen Time-Out (s)
-ltn-dispatcher-delivery-timeout=Lieferzeit Time-Out (ticks)
+ltn-dispatcher-depot-inactivity(s)=Depot Inaktivität (sek)
+ltn-dispatcher-stop-timeout(s)=Haltestellen Time-Out (sek)
+ltn-dispatcher-delivery-timeout(s)=Lieferzeit Time-Out (sek)
 ltn-dispatcher-requester-delivery-reset=Fahrplan bei Anforderer zurücksetzen
 ltn-dispatcher-finish-loading=Beladung abschließen
 ltn-depot-reset-filters=Depots löschen Filter
@@ -24,9 +24,9 @@ ltn-dispatcher-stops-per-tick=Limitiert wie viele Stops pro tick gelesen werden.
 ltn-dispatcher-requester-threshold=Mindestmenge an Artikeln um eine Lieferung auszulösen. \nKann durch Signal pro Anforderer-Haltestelle überschrieben werden.\ndefault = 1000
 ltn-dispatcher-provider-threshold=Mindestmenge an Artikeln um als Anbieter erkannt zu werden. \nKann durch Signal pro Anbieter-Haltestelle überschrieben werden.\ndefault = 1000
 ltn-dispatcher-schedule-circuit-control=Aktiviert Schaltungsbedinungen rot = 0 ODER grün ≥ 1 for alle Haltestellen.\nAchtung: Alle LTN Haltestellen müssen "an Zug senden" aktiviert und eine Schaltnetz-Verbindung haben. Sonst warten Züge ewig auf ein Signal.\ndefault = false
-ltn-dispatcher-depot-inactivity=Inaktivitätsdauer in ticks bevor Züge das Depot verlassen.\ndefault = 300 (5sec)
-ltn-dispatcher-stop-timeout=Dauer in Sekunden bevor Züge ihre Station verlassen müssen.\n0 schaltet diese Funktion aus.\ndefault = 120
-ltn-dispatcher-delivery-timeout=Lieferzeit in ticks bevor Züge als vermisst gelten.\ndefault = 18000 (5min)
+ltn-dispatcher-depot-inactivity(s)=Inaktivitätsdauer in Sekunden bevor Züge das Depot verlassen.\ndefault = 5s
+ltn-dispatcher-stop-timeout(s)=Dauer in Sekunden bevor Züge ihre Station verlassen müssen.\n0 schaltet diese Funktion aus.\ndefault = 120s
+ltn-dispatcher-delivery-timeout(s)=Lieferzeit in Sekunden bevor Züge als vermisst gelten.\ndefault = 600s (10min)
 ltn-dispatcher-requester-delivery-reset=Inaktiv: (default)\nLieferung und Fahrplan werden bei Ankunft im Depot zurück gesetzt.\nÄnderungen an Zügen in Anforderer-Haltestellen haben keine Auswirkung.\n\nAktiv:\nLieferung und Fahrplan werden bei verlassen der Anforderer-Haltestelle zurück gesetzt.\nÄnderungen an Zügen in Anforderer-Haltestellen löscht die Lieferung und setzt den Fahrplan zurück.
 ltn-dispatcher-finish-loading=Aktiv: (default)\nVerhindert verlassen von Haltestellen während Greifarme/Pumpen arbeiten.\n\nInaktiv:\nZüge verlassen Haltestellen unmittelbar nach erreichen ihrer gewünschten Beladung.\nGreifarme bleiben Gegenstände haltend stecken, Tankwaggons enthalten Restmengen.
 ltn-depot-reset-filters=Aktiv: (default)\nFilter und Stapelbegrenzung in Güterwagons werden im Depot gelöscht.
