@@ -8,9 +8,9 @@ ltn-dispatcher-stops-per-tick=limit stops checked per tick
 ltn-dispatcher-requester-threshold=Request Threshold
 ltn-dispatcher-provider-threshold=Provide Threshold
 ltn-dispatcher-schedule-circuit-control=Schedule circuit conditions
-ltn-dispatcher-depot-inactivity=Depot inactivity (ticks)
-ltn-dispatcher-stop-timeout=Stop timeout (s)
-ltn-dispatcher-delivery-timeout=Delivery timeout (ticks)
+ltn-dispatcher-depot-inactivity(s)=Depot inactivity (sec)
+ltn-dispatcher-stop-timeout(s)=Stop timeout (sec)
+ltn-dispatcher-delivery-timeout(s)=Delivery timeout (sec)
 ltn-dispatcher-requester-delivery-reset=Delivery completes at requester
 ltn-dispatcher-finish-loading=Finish loading
 ltn-depot-reset-filters=Depots reset filters
@@ -26,9 +26,9 @@ ltn-dispatcher-stops-per-tick=Limits the number of stops parsed each tick.\nLowe
 ltn-dispatcher-requester-threshold=Missing amount of items/fluids triggering a delivery.\nCan be overridden with signal at requesting stops.\ndefault = 1000
 ltn-dispatcher-provider-threshold=Amount of items/fluids required to act as provider.\nCan be overridden with signal at providing stops.\ndefault = 1000
 ltn-dispatcher-schedule-circuit-control=Adds circuit conditions to wait for red = 0 OR green ≥ 1 to all stops.\nWarning: All LTN stops require having "send to train" enabled and a circuit connection. Otherwise trains will be stuck waiting forever.\ndefault = false
-ltn-dispatcher-depot-inactivity=Duration in ticks of inactivity before trains leave the depot.\ndefault = 300 (5sec)
-ltn-dispatcher-stop-timeout=Duration in seconds before trains are forced out of a station.\n0 deactivates this feature.\ndefault = 120
-ltn-dispatcher-delivery-timeout=Duration in ticks deliveries can take before assuming the train was lost.\ndefault = 18000 (5min)
+ltn-dispatcher-depot-inactivity(s)=Duration in seconds of inactivity before trains leave the depot.\ndefault = 5
+ltn-dispatcher-stop-timeout(s)=Duration in seconds before trains are forced out of a station.\n0 deactivates this feature.\ndefault = 120
+ltn-dispatcher-delivery-timeout(s)=Duration in seconds deliveries can take before assuming the train was lost.\ndefault = 600 (10min)
 ltn-dispatcher-requester-delivery-reset=False: (default)\nDelivery and schedule are reset when train arrives at depot.\nChanges to trains parked at requesting stops have no effect.\n\nTrue:\nDelivery and schedule are reset when train leaves requester.\nChanges to trains parked at requesting stops will remove delivery and reset schedule.
 ltn-dispatcher-finish-loading=True: (default)\nPrevents trains from leaving while inserters/pumps are working by adding 2s inactivity condition.\n\nFalse:\nTrains will leave immediately when all items have been loaded.\nInserters at loading stations will get stuck.
 ltn-depot-reset-filters=True: (default)\nCargo wagons have their filters and stack limitations cleared when entering a depot.
