@@ -2,7 +2,9 @@
 Version: 1.10.11
 Date: 2019-05-28
   Changes:
+    - depot inactivity is now in seconds
     - stop timeout is now in seconds
+    - delivery timeout is now in seconds
   Bugfixes:
     - changes to stop timeout only applied after save and reload #178
 ---------------------------------------------------------------------------------------------------
